--- a/css/tuPanalera.css
+++ b/css/tuPanalera.css
@@ -7,44 +7,44 @@ body{font-family: 'Open Sans', sans-serif;font-size: 16px}
 .nav.navbar-nav{background: transparent;}
 
 .bgWhite{background: #fff}
-.bgBlue{background: #00bbd3}
+.bgBlue{background: #5E94C5}
 
-.bgBanner{background: #fff url(../images/diseno/lines.png) repeat-x left bottom;padding-bottom: 2%}
+.bgBanner{/*background: #fff url(../images/diseno/lines.png) repeat-x left bottom;padding-bottom: 2%*/}
 .transUpper{background: rgba(255,255,255,.6)}
 .cover{-webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: cover;}
-.btn1{background: #00bbd3;color:#fff;font-weight: bold;border-radius: 0;padding: 2%;border:none;}
-.btn2{background: #4bae4f;color:#fff;font-weight: bold;border-radius: 0;padding: 2%;border:none;}
-.btn3{background: #fec006;color:#fff;font-weight: bold;border-radius: 0;padding: 2%;border:none;}
-.btn4{background: #f34235;color:#fff;font-weight: bold;border-radius: 0;padding: 2%;border:none;}
-.btn5{background: #04e0ff;color:#fff;font-weight: bold;border-radius: 0;padding: 2%;border:none;}
+.btn1{background: #5E94C5;color:#fff;font-weight: bold;border-radius: 0;padding: 2%;border:none;float:left;}
+.btn2{background: #4bae4f;color:#fff;font-weight: bold;border-radius: 0;padding: 2%;border:none;float:left;}
+.btn3{background: #EF8F0A;color:#fff;font-weight: bold;border-radius: 0;padding: 2%;border:none;float:left;}
+.btn4{background: #DA007F;color:#fff;font-weight: bold;border-radius: 0;padding: 2%;border:none;float:left;}
+.btn5{background: #22BDFF;color:#fff;font-weight: bold;border-radius: 0;padding: 2%;border:none;float:left;}
 
 .btn1:hover {
-  background: rgba(0,0,0,0);
-  color: #00bbd3 !important;
-  box-shadow: inset 0 0 0 3px #00bbd3;
+  background: #fff;
+  color: #5E94C5 !important;
+  box-shadow: inset 0 0 0 3px #5E94C5;
 }
 .btn2:hover {
-  background: rgba(0,0,0,0);
+  background: #fff;
   color: #4bae4f !important;
   box-shadow: inset 0 0 0 3px #4bae4f;
 }
 .btn3:hover {
-  background: rgba(0,0,0,0);
-  color: #fec006 !important;
-  box-shadow: inset 0 0 0 3px #fec006;
+  background: #fff;
+  color: #EF8F0A !important;
+  box-shadow: inset 0 0 0 3px #EF8F0A;
 }
 .btn4:hover {
-  background: rgba(0,0,0,0);
-  color: #f34235 !important;
-  box-shadow: inset 0 0 0 3px #f34235;
+  background: #fff;
+  color: #DA007F !important;
+  box-shadow: inset 0 0 0 3px #DA007F;
 }
 .btn5:hover {
-  background: rgba(0,0,0,0);
-  color: #04e0ff !important;
-  box-shadow: inset 0 0 0 3px #04e0ff;
+  background: #fff;
+  color: #22BDFF !important;
+  box-shadow: inset 0 0 0 3px #22BDFF;
 }
 
 
