Ajuste para permitir multiple categorización en el catálogo

--- a/css/tuPanalera.css
+++ b/css/tuPanalera.css
@@ -15,7 +15,7 @@ body{font-family: 'Open Sans', sans-serif;font-size: 16px}
 .nav.navbar-nav{background: transparent;}
 
 .bgWhite{background: #fff}
-.bgBlue{background: #5E94C5}
+.bgBlue{background: #5E94C5}cm
 
 .bgBanner{/*background: #fff url(../images/diseno/lines.png) repeat-x left bottom;padding-bottom: 2%*/}
 .transUpper{background: rgba(255,255,255,.6)}
